new message creation through queue

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Dashboard Inbox Engine</title>
     <link rel="stylesheet" href="bower_components/please-wait/build/please-wait.css">
     <link rel="stylesheet" href="bower_components/please-wait/build/default.css">
+    <link rel="stylesheet" href="bower_components/sweetalert/dist/sweetalert.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/wzrk.css">
     <link rel="stylesheet" href="css/common.css">
@@ -17,6 +18,7 @@
 <body>
     <div ng-view></div>
     <script src="bower_components/please-wait/build/please-wait.js"></script>
+    <script src="bower_components/sweetalert/dist/sweetalert.min.js"></script>
     <script src="lib/loadingStart.js"></script>
     <script src="lib/jquery.min.js"></script>
     <script src="bower_components/angular/angular.min.js"></script>
