--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Dashboard Inbox Engine</title>
     <link rel="stylesheet" href="bower_components/please-wait/build/please-wait.css">
-    <link rel="stylesheet" href="bower_components/please-wait/build/default.css">
+    <link rel="stylesheet" href="css/default.css">
     <link rel="stylesheet" href="bower_components/sweetalert/dist/sweetalert.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/wzrk.css">
