searchable email and card type added

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="node_modules/angular-bootstrap-datetimepicker/src/css/datetimepicker.css" />
     <link rel="stylesheet" href="css/kendo.common.min.css" />
     <link rel="stylesheet" href="css/kendo.default.min.css" />
+    <link rel="stylesheet" href="lib/autocomplete/angular-material.css" />
 </head>
 
 <body>
@@ -21,11 +22,14 @@
     <script src="bower_components/sweetalert/dist/sweetalert.min.js"></script>
     <script src="lib/loadingStart.js"></script>
     <script src="lib/jquery.min.js"></script>
-    <script src="bower_components/sweetalert/dist/sweetalert.min.js"></script>
     <script src="bower_components/angular/angular.min.js"></script>
+    <script src="bower_components/sweetalert/dist/sweetalert.min.js"></script>
     <script src="bower_components/angular-route/angular-route.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.5.0/ui-bootstrap-tpls.js"></script>
     <script src="node_modules/moment/moment.js"></script>
+    <script src="lib/autocomplete/angular-animate.min.js"></script>
+    <script src="lib/autocomplete/angular-aria.min.js"></script>
+    <script src="lib/autocomplete/angular-material.js"></script>
     <script src="node_modules/angular-bootstrap-datetimepicker/src/js/datetimepicker.js"></script>
     <script src="node_modules/angular-bootstrap-datetimepicker/src/js/datetimepicker.templates.js"></script>
     <script src="node_modules/angular-date-time-input/src/dateTimeInput.js"></script>
