--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="node_modules/angular-bootstrap-datetimepicker/src/css/datetimepicker.css" />
     <link rel="stylesheet" href="css/kendo.common.min.css" />
-    <link rel="stylesheet" href="css/kendo.default.min.css" />
+    <link rel="stylesheet" href="css/kendo.default.min.css" /> 
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -24,6 +25,7 @@
     <script src="bower_components/sweetalert/dist/sweetalert.min.js"></script>
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="bower_components/angular-route/angular-route.min.js"></script>
+    <script data-require="ui-bootstrap@*" data-semver="0.12.1" src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.12.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.5.0/ui-bootstrap-tpls.js"></script>
     <script src="node_modules/moment/moment.js"></script>
     <script src="node_modules/angular-bootstrap-datetimepicker/src/js/datetimepicker.js"></script>
@@ -35,13 +37,17 @@
     <script src="controllers/new.js"></script>
     <script src="controllers/scheduled.js"></script>
     <script src="controllers/sent.js"></script>
-    <script src="controllers/draft.js"></script>
+    <script src="controllers/viewCampaigns.js"></script>
     <script src="controllers/listAnnouncementsCtrl.js"></script>
     <script src="controllers/listNotificationsCtrl.js"></script>
     <script src="controllers/announcement.js"></script>
     <script src="controllers/notification.js"></script>
     <script src="services/userNotificationService.js"></script>
     <script src="lib/loadingStop.js"></script>
+    
+    <script data-require="bootstrap@3.1.1" data-semver="3.1.1" src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+  <script src="dirPagination.js"></script>
+  
 </body>
 
 </html>
