file structing and loading added in createCampaign

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="node_modules/angular-bootstrap-datetimepicker/src/css/datetimepicker.css" />
     <link rel="stylesheet" href="css/kendo.common.min.css" />
     <link rel="stylesheet" href="css/kendo.default.min.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="lib/pagination/dirPaginationStyle.css" />
     <link rel="stylesheet" href="lib/autocomplete/angular-material.css" />
 </head>
 
@@ -48,7 +48,7 @@
     <script src="lib/loadingStop.js"></script>
     
     <script data-require="bootstrap@3.1.1" data-semver="3.1.1" src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-  <script src="dirPagination.js"></script>
+  <script src="lib/pagination/dirPagination.js"></script>
   
 </body>
 
