--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
     <script src="node_modules/angular-bootstrap-datetimepicker/src/js/datetimepicker.templates.js"></script>
     <script src="node_modules/angular-date-time-input/src/dateTimeInput.js"></script>
     <script src="lib/kendo.all.min.js"></script>
+    <script type="text/javascript" src="lib/autocomplete/angular-messages.min.js"></script>
+    <script type="text/javascript" src="lib/autocomplete/svg-assets-cache.js"></script>
     <script src="app.js"></script>
     <script src="controllers/dashboardCtrl.js"></script>
     <script src="controllers/createCampaignCtrl.js"></script>
@@ -46,10 +48,8 @@
     <script src="controllers/sent.js"></script>
     <script src="services/userNotificationService.js"></script>
     <script src="lib/loadingStop.js"></script>
-    
     <script data-require="bootstrap@3.1.1" data-semver="3.1.1" src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-  <script src="lib/pagination/dirPagination.js"></script>
-  
+    <script src="lib/pagination/dirPagination.js"></script>
 </body>
 
 </html>
