createUser module added

--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
     <script src="app.js"></script>
     <script src="controllers/dashboardCtrl.js"></script>
     <script src="controllers/createCampaignCtrl.js"></script>
+    <script src="controllers/createUserCtrl.js"></script>
     <script src="controllers/viewCampaignsCtrl.js"></script>
     <script src="controllers/editAnnouncementCtrl.js"></script>
     <script src="controllers/editNotificationCtrl.js"></script>
     <script src="controllers/listAnnouncementsCtrl.js"></script>
     <script src="controllers/listNotificationsCtrl.js"></script>
-    <script src="controllers/sent.js"></script>
     <script src="services/userNotificationService.js"></script>
     <script src="lib/loadingStop.js"></script>
     <script data-require="bootstrap@3.1.1" data-semver="3.1.1" src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
