reset password form and controller added

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <script src="controllers/editNotificationCtrl.js"></script>
     <script src="controllers/listAnnouncementsCtrl.js"></script>
     <script src="controllers/listNotificationsCtrl.js"></script>
+    <script src="controllers/resetPasswordCtrl.js"></script>
     <script src="services/userNotificationService.js"></script>
     <script src="lib/loadingStop.js"></script>
     <script data-require="bootstrap@3.1.1" data-semver="3.1.1" src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
