userLoginForm created and authenticationService Created

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <script type="text/javascript" src="lib/autocomplete/angular-messages.min.js"></script>
     <script type="text/javascript" src="lib/autocomplete/svg-assets-cache.js"></script>
     <script src="app.js"></script>
+    <script src="controllers/userLoginCtrl.js"></script>
     <script src="controllers/dashboardCtrl.js"></script>
     <script src="controllers/createCampaignCtrl.js"></script>
     <script src="controllers/createUserCtrl.js"></script>
@@ -46,7 +47,8 @@
     <script src="controllers/editNotificationCtrl.js"></script>
     <script src="controllers/listAnnouncementsCtrl.js"></script>
     <script src="controllers/listNotificationsCtrl.js"></script>
-    <script src="services/userNotificationService.js"></script>
+    <script src="services/messageService.js"></script>
+    <script src="services/authenticationService.js"></script>
     <script src="lib/loadingStop.js"></script>
     <script data-require="bootstrap@3.1.1" data-semver="3.1.1" src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     <script src="lib/pagination/dirPagination.js"></script>
