--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/default.css">
     <link rel="stylesheet" href="bower_components/sweetalert/dist/sweetalert.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/wzrk.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
