list user ctrl and html file added

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <script src="controllers/editNotificationCtrl.js"></script>
     <script src="controllers/listAnnouncementsCtrl.js"></script>
     <script src="controllers/listNotificationsCtrl.js"></script>
+    <script src="controllers/listUsersCtrl.js"></script>
     <script src="services/messageService.js"></script>
     <script src="services/authenticationService.js"></script>
     <script src="lib/loadingStop.js"></script>
